Updated online voting project